--- a/src/main/java/Main.form
+++ b/src/main/java/Main.form
@@ -1,13 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Main">
-  <grid id="27dc6" row-count="1" column-count="1" layout-manager="GridLayoutManager">
+  <grid id="27dc6" binding="JPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+      <xy x="20" y="20" width="803" height="527"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-4015079"/>
+      <foreground color="-14739101"/>
+    </properties>
     <border type="none"/>
-    <children/>
+    <children>
+      <component id="c6806" class="javax.swing.JButton" binding="btnRankin">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-11183529"/>
+          <font name="Andale Mono" style="1"/>
+          <foreground color="-1840666"/>
+          <text value="Ranking"/>
+        </properties>
+      </component>
+      <component id="5f585" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false">
+            <maximum-size width="-1" height="0"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-14254744"/>
+          <font name="Chalkduster" size="48"/>
+          <foreground color="-14254744"/>
+          <text value="THE SIMPSONS"/>
+        </properties>
+      </component>
+      <component id="f871" class="javax.swing.JButton" binding="btnJugar" custom-create="true">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <actionCommand value="Jugar&#10;"/>
+          <autoscrolls value="true"/>
+          <background color="-11183529"/>
+          <borderPainted value="true"/>
+          <contentAreaFilled value="true"/>
+          <enabled value="true"/>
+          <font name="Andale Mono" style="1"/>
+          <foreground color="-197121"/>
+          <horizontalAlignment value="0"/>
+          <text value="Jugar"/>
+          <verticalAlignment value="0"/>
+        </properties>
+      </component>
+      <component id="22945" class="javax.swing.JButton" binding="salirButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-11183529"/>
+          <font name="Andale Mono" style="1"/>
+          <foreground color="-197121"/>
+          <horizontalAlignment value="0"/>
+          <horizontalTextPosition value="0"/>
+          <text value="Salir"/>
+        </properties>
+      </component>
+    </children>
   </grid>
 </form>
